ver 0.18 (2012/??/??)
* decoder:
  - adplug: new decoder plugin using libadplug
  - flac: require libFLAC 1.2 or newer
  - flac: support FLAC files inside archives
  - opus: new decoder plugin for the Opus codec
  - vorbis: skip 16 bit quantisation, provide float samples
* encoder:
  - opus: new encoder plugin for the Opus codec
  - vorbis: accept floating point input samples
* output:
  - new option "tags" may be used to disable sending tags to output
* improved decoder/output error reporting


ver 0.17.4 (2013/??/??)
* decoder:
  - ffmpeg: support float planar audio (ffmpeg 1.1)

ver 0.17.3 (2013/01/06)
* output:
  - osx: fix pops during playback
  - recorder: fix I/O error check
  - shout: fix memory leak in error handler
  - recorder, shout: support Ogg packets that span more than one page
* decoder:
  - ffmpeg: ignore negative time stamps
  - ffmpeg: support planar audio
* playlist:
  - cue: fix memory leak
  - cue: fix CUE files with only one track

ver 0.17.2 (2012/09/30)
* protocol:
  - fix crash in local file check
* decoder:
  - fluidsynth: remove throttle (requires libfluidsynth 1.1)
  - fluidsynth: stop playback at end of file
  - fluidsynth: check MIDI file format while scanning
  - fluidsynth: add sample rate setting
  - wavpack: support all APEv2 tags
* output:
  - httpd: use monotonic clock, avoid hiccups after system clock adjustment
  - httpd: fix throttling bug after resuming playback
* playlist:
  - cue: map "PERFORMER" to "artist" or "album artist"
* mapper: fix non-UTF8 music directory name
* mapper: fix potential crash in file permission check
* playlist: fix use-after-free bug
* playlist: fix memory leak
* state_file: save song priorities
* player: disable cross-fading in "single" mode
* update: fix unsafe readlink() usage
* configure.ac:
  - don't auto-detect the vorbis encoder when Tremor is enabled

ver 0.17.1 (2012/07/31)
* protocol:
  - require appropriate permissions for searchadd{,pl}
* tags:
  - aiff: support the AIFC format