@@ -40,7 +40,6 @@ extern const struct decoder_plugin mad_decoder_plugin;
 extern const struct decoder_plugin mpg123_decoder_plugin;
 extern const struct decoder_plugin sndfile_decoder_plugin;
 extern const struct decoder_plugin audiofile_decoder_plugin;
-extern const struct decoder_plugin mp4ff_decoder_plugin;
 extern const struct decoder_plugin faad_decoder_plugin;
 extern const struct decoder_plugin mpcdec_decoder_plugin;
 extern const struct decoder_plugin modplug_decoder_plugin;
@@ -79,9 +78,6 @@ const struct decoder_plugin *const decoder_plugins[] = {
 	&dsf_decoder_plugin,
 #ifdef HAVE_FAAD
 	&faad_decoder_plugin,
-#endif
-#ifdef HAVE_MP4
-	&mp4ff_decoder_plugin,
 #endif
 #ifdef HAVE_MPCDEC
 	&mpcdec_decoder_plugin,
